--- a/lqdsqd-react-app/src/pages/Info/Info.css
+++ b/lqdsqd-react-app/src/pages/Info/Info.css
@@ -33,4 +33,5 @@
     max-width: 500px;
     margin: auto;
     margin-top: 30px;
+    padding-bottom: 20px;
 }
